made first (introduction) section

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
 
     <main>
       <section class="introduction-section">
-        <h1 class="page-title">Effective Solutions for Your Business</h1>
-        <button class="order-service-button" type="button">
-          Order Service
-        </button>
+        <div class="container">
+          <h1 class="page-title">Effective Solutions for Your Business</h1>
+          <button class="order-service-button" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
 
       <section class="advantages-section">
