made second (advantages) section

--- a/index.html
+++ b/index.html
@@ -68,41 +68,43 @@
         </div>
       </section>
 
-      <section class="advantages-section">
-        <h2>content</h2>
-        <ul class="adv-list">
-          <li>
-            <h3 class="item-title">Strategy</h3>
-            <p class="item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+      <section class="advantages section">
+        <div class="container">
+          <h2 class="visually-hidden">content</h2>
+          <ul class="adv-list">
+            <li class="adv-list-item">
+              <h3 class="item-title">Strategy</h3>
+              <p class="item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="item-title">Punctuality</h3>
-            <p class="item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+            <li class="adv-list-item">
+              <h3 class="item-title">Punctuality</h3>
+              <p class="item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="item-title">Diligence</h3>
-            <p class="item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+            <li class="adv-list-item">
+              <h3 class="item-title">Diligence</h3>
+              <p class="item-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li>
-            <h3 class="item-title">Technologies</h3>
-            <p class="item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li class="adv-list-item">
+              <h3 class="item-title">Technologies</h3>
+              <p class="item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team-section">
