made third (team) section

--- a/index.html
+++ b/index.html
@@ -107,54 +107,64 @@
         </div>
       </section>
 
-      <section class="team-section">
-        <h2 class="section-main-title">Our Team</h2>
+      <section class="team section">
+        <div class="container">
+          <h2 class="section-main-title">Our Team</h2>
 
-        <ul>
-          <li class="member-card">
-            <img
-              class="member-photo"
-              src="./images/team-section-img/mark-guerrero-av.jpg"
-              alt="users avatar"
-              width="264"
-            />
-            <h3 class="item-title">Mark Guerrero</h3>
-            <p class="item-text">Product Designer</p>
-          </li>
+          <ul class="team-cards-list">
+            <li class="member-card">
+              <img
+                class="member-photo"
+                src="./images/team-section-img/mark-guerrero-av.jpg"
+                alt="users avatar"
+                width="264"
+              />
+              <div class="member-info">
+                <h3 class="item-title">Mark Guerrero</h3>
+                <p class="item-text">Product Designer</p>
+              </div>
+            </li>
 
-          <li class="member-card">
-            <img
-              class="member-photo"
-              src="./images/team-section-img/tom-ford-av.jpg"
-              alt="users avatar"
-              width="264"
-            />
-            <h3 class="item-title">Tom Ford</h3>
-            <p class="item-text">Frontend Developer</p>
-          </li>
+            <li class="member-card">
+              <img
+                class="member-photo"
+                src="./images/team-section-img/tom-ford-av.jpg"
+                alt="users avatar"
+                width="264"
+              />
+              <div class="member-info">
+                <h3 class="item-title">Tom Ford</h3>
+                <p class="item-text">Frontend Developer</p>
+              </div>
+            </li>
 
-          <li class="member-card">
-            <img
-              class="member-photo"
-              src="./images/team-section-img/camila-garcia-av.jpg"
-              alt="users avatar"
-              width="264"
-            />
-            <h3 class="item-title">Camila Garcia</h3>
-            <p class="item-text">Marketing</p>
-          </li>
+            <li class="member-card">
+              <img
+                class="member-photo"
+                src="./images/team-section-img/camila-garcia-av.jpg"
+                alt="users avatar"
+                width="264"
+              />
+              <div class="member-info">
+                <h3 class="item-title">Camila Garcia</h3>
+                <p class="item-text">Marketing</p>
+              </div>
+            </li>
 
-          <li class="member-card">
-            <img
-              class="member-photo"
-              src="./images/team-section-img/daniel-wilson-av.jpg"
-              alt="users avatar"
-              width="264"
-            />
-            <h3 class="item-title">Daniel Wilson</h3>
-            <p class="item-text">UI Designer</p>
-          </li>
-        </ul>
+            <li class="member-card">
+              <img
+                class="member-photo"
+                src="./images/team-section-img/daniel-wilson-av.jpg"
+                alt="users avatar"
+                width="264"
+              />
+              <div class="member-info">
+                <h3 class="item-title">Daniel Wilson</h3>
+                <p class="item-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="portfolio-section">
