made fourht (portfolio) section and footer

--- a/index.html
+++ b/index.html
@@ -167,86 +167,102 @@
         </div>
       </section>
 
-      <section class="portfolio-section">
-        <h1 class="section-main-title">Our Portfolio</h1>
-        <ul>
-          <li class="project-card">
-            <img
-              class="project-preview"
-              src="./images/portfolio-section-img/banking.jpg"
-              alt="Banking App image"
-              width="360"
-            />
-            <h3 class="item-title">Banking App</h3>
-            <p class="item-text">App</p>
-          </li>
+      <section class="portfolio section">
+        <div class="container">
+          <h1 class="section-main-title">Our Portfolio</h1>
+          <ul class="projects-list">
+            <li class="project-card">
+              <img
+                class="project-preview"
+                src="./images/portfolio-section-img/banking.jpg"
+                alt="Banking App image"
+                width="360"
+              />
+              <div class="project-description">
+                <h3 class="item-title">Banking App</h3>
+                <p class="item-text">App</p>
+              </div>
+            </li>
 
-          <li class="project-card">
-            <img
-              class="project-preview"
-              src="./images/portfolio-section-img/cashless-payment.jpg"
-              alt="Cashless Payment image"
-              width="360"
-            />
-            <h3 class="item-title">Cashless Payment</h3>
-            <p class="item-text">Marketing</p>
-          </li>
+            <li class="project-card">
+              <img
+                class="project-preview"
+                src="./images/portfolio-section-img/cashless-payment.jpg"
+                alt="Cashless Payment image"
+                width="360"
+              />
+              <div class="project-description">
+                <h3 class="item-title">Cashless Payment</h3>
+                <p class="item-text">Marketing</p>
+              </div>
+            </li>
 
-          <li class="project-card">
-            <img
-              class="project-preview"
-              src="./images/portfolio-section-img/meditation-app.jpg"
-              alt="Meditation App image"
-              width="360"
-            />
-            <h3 class="item-title">Meditation App</h3>
-            <p class="item-text">App</p>
-          </li>
+            <li class="project-card">
+              <img
+                class="project-preview"
+                src="./images/portfolio-section-img/meditation-app.jpg"
+                alt="Meditation App image"
+                width="360"
+              />
+              <div class="project-description">
+                <h3 class="item-title">Meditation App</h3>
+                <p class="item-text">App</p>
+              </div>
+            </li>
 
-          <li class="project-card">
-            <img
-              class="project-preview"
-              src="./images/portfolio-section-img/taxi-service.jpg"
-              alt="Taxi Service image"
-              width="360"
-            />
-            <h3 class="item-title">Taxi Service</h3>
-            <p class="item-text">Marketing</p>
-          </li>
+            <li class="project-card">
+              <img
+                class="project-preview"
+                src="./images/portfolio-section-img/taxi-service.jpg"
+                alt="Taxi Service image"
+                width="360"
+              />
+              <div class="project-description">
+                <h3 class="item-title">Taxi Service</h3>
+                <p class="item-text">Marketing</p>
+              </div>
+            </li>
 
-          <li class="project-card">
-            <img
-              class="project-preview"
-              src="./images/portfolio-section-img/screen-illustrations.jpg"
-              alt="Screen Illustrations image"
-              width="360"
-            />
-            <h3 class="item-title">Screen Illustrations</h3>
-            <p class="item-text">Design</p>
-          </li>
+            <li class="project-card">
+              <img
+                class="project-preview"
+                src="./images/portfolio-section-img/screen-illustrations.jpg"
+                alt="Screen Illustrations image"
+                width="360"
+              />
+              <div class="project-description">
+                <h3 class="item-title">Screen Illustrations</h3>
+                <p class="item-text">Design</p>
+              </div>
+            </li>
 
-          <li class="project-card">
-            <img
-              class="project-preview"
-              src="./images/portfolio-section-img/online-cources.jpg"
-              alt="Online Courses image"
-              width="360"
-            />
-            <h3 class="item-title">Online Courses</h3>
-            <p class="item-text">Marketing</p>
-          </li>
-        </ul>
+            <li class="project-card">
+              <img
+                class="project-preview"
+                src="./images/portfolio-section-img/online-cources.jpg"
+                alt="Online Courses image"
+                width="360"
+              />
+              <div class="project-description">
+                <h3 class="item-title">Online Courses</h3>
+                <p class="item-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer class="footer">
-      <a class="logo" href="./index.html">
-        Web<span class="logo-span">Studio</span>
-      </a>
-      <p class="item-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing &amp; growth solutions.
-      </p>
+    <footer class="footer section">
+      <div class="container">
+        <a class="logo" href="./index.html">
+          Web<span class="logo-span">Studio</span>
+        </a>
+        <p class="item-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
